--- a/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.links.task.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.links.task.yml
@@ -33,17 +33,11 @@ digital_serial_issue.title_issues:
   weight: 150
 
 entity.digital_serial_issue.view_custom:
-  title: 'View'
+  title: 'View Pages'
   route_name: digital_serial_issue.title_view_issue
   base_route: digital_serial_issue.title_view_issue
 
 entity.digital_serial_issue.edit_form_custom:
-  title: 'Edit'
+  title: 'Edit Metadata'
   route_name: digital_serial_issue.title_edit_issue
   base_route: digital_serial_issue.title_view_issue
-
-entity.digital_serial_issue.delete_form_custom:
-  title: Delete
-  route_name:  entity.digital_serial_issue.delete_form
-  base_route:  digital_serial_issue.title_view_issue
-  weight: 10
