--- a/config-yml/field.field.node.publication.field_serial_relation_suc_ref_up.yml
+++ b/config-yml/field.field.node.publication.field_serial_relation_suc_ref_up.yml
@@ -10,7 +10,7 @@ field_name: field_serial_relation_suc_ref_up
 entity_type: node
 bundle: publication
 label: 'Succeeding Upstream'
-description: ''
+description: 'Choose a publication'
 required: false
 translatable: false
 default_value: {  }
