NBNP-16 Add digital serial issue and page sample content

--- a/tests/visual-regression/visreg_content/visreg_content.services.yml
+++ b/tests/visual-regression/visreg_content/visreg_content.services.yml
@@ -7,3 +7,7 @@ services:
     class: Drupal\visreg_content\Event\HoldingMigrateEvent
     tags:
       - { name: event_subscriber }
+  visreg_content.4_page_migrate_subscriber:
+    class: Drupal\visreg_content\Event\PageMigrateEvent
+    tags:
+      - { name: event_subscriber }
