Add test rows, leverage CommerceGuys addressing to migrate address

--- a/tests/visual-regression/visreg_content/config/install/migrate_plus.migration.0_visreg_content_titles.yml
+++ b/tests/visual-regression/visreg_content/config/install/migrate_plus.migration.0_visreg_content_titles.yml
@@ -16,6 +16,12 @@ source:
       uuid: Unique ID
     1:
       name: Name of the Title
+    2:
+      country: Country
+    3:
+      administrative_area: Province/State
+    4:
+      locality: City
 
 destination:
   plugin: entity:node
@@ -25,6 +31,14 @@ process:
     plugin: default_value
     default_value: publication
   title: name
+  field_place_of_publication/country_code:
+    plugin: default_value
+    default_value: CA
+  field_place_of_publication/langcode:
+    plugin: default_value
+    default_value: en
+  field_place_of_publication/administrative_area: province
+  field_place_of_publication/locality: city
 
 dependencies:
   module:
