NBNP-19 Add Triweekly to Frequency field+migration

--- a/config-yml/field.storage.node.field_frequency.yml
+++ b/config-yml/field.storage.node.field_frequency.yml
@@ -18,6 +18,9 @@ settings:
       value: weekly
       label: Weekly
     -
+      value: triweekly
+      label: Triweekly
+    -
       value: monthly
       label: Monthly
     -
