--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -80,7 +80,7 @@ content:
     type: basic_string
     region: content
   field_family:
-    weight: 16
+    weight: 14
     label: above
     settings:
       link: true
@@ -106,7 +106,7 @@ content:
     type: daterange_default
     region: content
   field_first_issue_date_type:
-    weight: 20
+    weight: 18
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -115,9 +115,10 @@ content:
   field_frequency:
     weight: 5
     label: above
-    settings: {  }
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
-    type: list_default
+    type: string
     region: content
   field_frequency_notes:
     weight: 6
@@ -136,7 +137,7 @@ content:
     type: string
     region: content
   field_is_supplementary_title:
-    weight: 18
+    weight: 16
     label: above
     settings:
       format: default
@@ -172,7 +173,7 @@ content:
     type: daterange_default
     region: content
   field_last_issue_date_type:
-    weight: 19
+    weight: 17
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -202,7 +203,7 @@ content:
     type: entity_reference_label
     region: content
   field_sample_image:
-    weight: 27
+    weight: 25
     label: hidden
     settings:
       image_style: sample_publication_image
@@ -211,7 +212,7 @@ content:
     type: image
     region: content
   field_serial_relation_pre_ref_dn:
-    weight: 24
+    weight: 22
     label: above
     settings:
       link: true
@@ -219,7 +220,7 @@ content:
     type: entity_reference_label
     region: content
   field_serial_relation_pre_ref_up:
-    weight: 23
+    weight: 21
     label: above
     settings:
       link: true
@@ -227,7 +228,7 @@ content:
     type: entity_reference_label
     region: content
   field_serial_relation_suc_ref_dn:
-    weight: 26
+    weight: 24
     label: above
     settings:
       link: true
@@ -235,7 +236,7 @@ content:
     type: entity_reference_label
     region: content
   field_serial_relation_suc_ref_up:
-    weight: 25
+    weight: 23
     label: above
     settings:
       link: true
@@ -243,14 +244,14 @@ content:
     type: entity_reference_label
     region: content
   field_serial_relationship_op_pre:
-    weight: 21
+    weight: 19
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_serial_relationship_op_suc:
-    weight: 22
+    weight: 20
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -288,7 +289,7 @@ content:
     type: file_default
     region: content
   field_this_is_part_of_a_family:
-    weight: 17
+    weight: 15
     label: above
     settings:
       format: default
@@ -305,7 +306,7 @@ content:
     type: basic_string
     region: content
   links:
-    weight: 15
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
