--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -12,7 +12,6 @@ dependencies:
     - field.field.node.publication.field_first_issue_date
     - field.field.node.publication.field_first_issue_date_type
     - field.field.node.publication.field_first_issue_sort_date
-    - field.field.node.publication.field_frequency
     - field.field.node.publication.field_frequency_notes
     - field.field.node.publication.field_geographic_coverage
     - field.field.node.publication.field_is_supplementary_title
@@ -25,6 +24,13 @@ dependencies:
     - field.field.node.publication.field_oclc
     - field.field.node.publication.field_place_of_publication
     - field.field.node.publication.field_publisher
+    - field.field.node.publication.field_sample_image
+    - field.field.node.publication.field_serial_relation_pre_ref_dn
+    - field.field.node.publication.field_serial_relation_pre_ref_up
+    - field.field.node.publication.field_serial_relation_suc_ref_dn
+    - field.field.node.publication.field_serial_relation_suc_ref_up
+    - field.field.node.publication.field_serial_relationship_op_pre
+    - field.field.node.publication.field_serial_relationship_op_suc
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_notes
     - field.field.node.publication.field_subjects
@@ -56,7 +62,6 @@ hidden:
   field_first_issue_date_type: true
   field_first_issue_precise_date: true
   field_first_issue_sort_date: true
-  field_frequency: true
   field_frequency_notes: true
   field_geographic_coverage: true
   field_is_supplementary_title: true
