--- a/config-yml/field.storage.node.field_frequency.yml
+++ b/config-yml/field.storage.node.field_frequency.yml
@@ -1,33 +1,18 @@
-uuid: 7c079058-ee2b-4189-88ea-ea2bd9e2d768
+uuid: 85915737-a35d-4df2-a3d6-8b4d2650418a
 langcode: en
 status: true
 dependencies:
   module:
     - node
-    - options
 id: node.field_frequency
 field_name: field_frequency
 entity_type: node
-type: list_string
+type: string
 settings:
-  allowed_values:
-    -
-      value: daily
-      label: Daily
-    -
-      value: weekly
-      label: Weekly
-    -
-      value: triweekly
-      label: Triweekly
-    -
-      value: monthly
-      label: Monthly
-    -
-      value: varies
-      label: Varies
-  allowed_values_function: ''
-module: options
+  max_length: 255
+  is_ascii: false
+  case_sensitive: false
+module: core
 locked: false
 cardinality: 1
 translatable: true
