--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -23,6 +23,7 @@ dependencies:
     - field.field.node.publication.field_last_issue_sort_date
     - field.field.node.publication.field_oclc
     - field.field.node.publication.field_place_of_publication
+    - field.field.node.publication.field_previous_identifications
     - field.field.node.publication.field_publisher
     - field.field.node.publication.field_sample_image
     - field.field.node.publication.field_serial_relation_pre_ref_dn
@@ -432,6 +433,14 @@ content:
       default_country: ''
     third_party_settings: {  }
     type: address_default
+    region: content
+  field_previous_identifications:
+    weight: 43
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_publisher:
     weight: 5
