--- a/tests/visual-regression/visreg_content/visreg_content.services.yml
+++ b/tests/visual-regression/visreg_content/visreg_content.services.yml
@@ -3,6 +3,10 @@ services:
     class: Drupal\visreg_content\Event\TitleMigrateEvent
     tags:
       - { name: event_subscriber }
+  visreg_content.0_microforms_title_migrate_subscriber:
+    class: Drupal\visreg_content\Event\MicroformsTitleMigrateEvent
+    tags:
+      - { name: event_subscriber }
   visreg_content.1_holdings_migrate_subscriber:
     class: Drupal\visreg_content\Event\HoldingMigrateEvent
     tags:
