--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -62,6 +62,7 @@ hidden:
   field_first_issue_date_type: true
   field_first_issue_precise_date: true
   field_first_issue_sort_date: true
+  field_frequency: true
   field_frequency_notes: true
   field_geographic_coverage: true
   field_is_supplementary_title: true
